# Polos

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTRIBUTE.md  Generate_OpenGL_VS2022.bat  LICENSE  PR.md  Polos.sln  README.md  build.bat  build_and_run.bat  build_polos.bat  build_polos.sh  external_depends.lua  generate_project_files.bat  get-workspace.sh  plconfig.h.in  polos_config.h.in  polos_config.hpp.in  premake5.lua  things_need_done.txt  vcpkg.json
Runtime/: CMakeLists.txt  premake5.lua
Runtime/engine/: plpch.cpp  plpch.h  polos.h  polos_pch.h
Runtime/engine/containers/: containers.h  delegate.h  dynamic_array.h
Runtime/engine/core/: application.cpp  application.h  camera.cpp  debug.h  engine.h  entry_point.h  event_bus.cpp  event_bus.h  event_bus.inl  i_window.h  layer.h  log.cpp  log.h  log.inl  logger.cpp  logger.h  resource_manager.cpp  resource_manager.h  system.h  types.h  util-inl.h  util.cpp  util.h  window.h
Runtime/engine/core/containers/: containers.h  delegate.h  dynamic_array.h
Runtime/engine/core/debug/: debug.h  plassert.h  profiling.h
Runtime/engine/core/engine/: engine.cpp  engine.h  subsytem.h  system.cpp  system.h
Runtime/engine/core/events/: event.h  events.h
Runtime/engine/core/io/: file.h  filesystem.h
Runtime/engine/core/memory/: linear_allocator.cpp  linear_allocator.h  linear_allocator.inl  mem_utils.h  pool_allocator.cpp  pool_allocator.h  pool_allocator.inl  stack_allocator.cpp  stack_allocator.h
Runtime/engine/core/time/: clock.h  scope_timer.cpp  scope_timer.h  scoped_timer.h  timer.h
Runtime/engine/core/utils/: alias.h  concepts.h  feature.h  macro_util.h  meta.h  type_util.cpp  type_util.h  utils.h
Runtime/engine/debug/: plassert.h  profiling.h
Runtime/engine/engine/: engine.cpp
Runtime/engine/events/: event.h
Runtime/engine/events/input/: input_events.h  mouse_move.h
Runtime/engine/events/window/: window_close.h  window_maximize.h  window_position.h
Runtime/engine/gui/imgui/: imgui_gui.cpp  imgui_impl_glfw.cpp
Runtime/engine/io/: file.cpp  file.h
Runtime/engine/memory/: stack_allocator.cpp
Runtime/engine/platform/: platform_detection.h
Runtime/engine/platform/linux/: linux_timer.cpp
Runtime/engine/platform/windows/: windows_clock.cpp  windows_timer.cpp
Runtime/engine/platform/xplat/: x_plat_window.cpp  x_plat_window.h
Runtime/engine/renderer/: renderer.cpp  renderer.h
Runtime/engine/renderer/context/: graphics_context.h  shader.h  shader_lib.h  vao.h  vbo.h  vertex.h  vertex_buffer_object.h
Runtime/engine/resources/shaders/: basic_color.frag  basic_color.gls  basic_color.vert
Runtime/engine/time/: scope_timer.cpp  timer.h
Runtime/engine/utils/: alias.h  concepts.h  feature.h  meta.h  stringid.h  type_util.cpp  type_util.h
Runtime/engine/window/: glfw_window.cpp  glfw_window.h  x_plat_window.cpp  x_plat_window.h
Runtime/include/: polos.h
Source/: CMakeLists.txt  polos_pch.h
Source/Config/: imgui.ini
Source/Config/include/polos/: polos_config.hpp
Source/Editor/: CMakeLists.txt  editor.cpp  editor.h
Source/Resource/: CMakeLists.txt
Source/Resource/Shaders/: basic_color.frag  basic_color.slang  basic_color.vert
Source/Runtime/: CMakeLists.txt  polos.h  polos_config.h
Source/Runtime/context/: shader.h  vertex.h
Source/Runtime/context/opengl/: opengl_context.cpp  opengl_shader_lib.cpp  opengl_texture.cpp  opengl_vao.cpp
Source/Runtime/core/: event_bus.cpp  event_bus.h  log.h  update_queue.cpp  update_queue.h
Source/Runtime/engine/: engine.cpp  engine.h
Source/Runtime/events/: events.h
Source/Runtime/events/input/: char_type.h  key_release.h  key_repeat.h  mouse_scroll.h
Source/Runtime/gui/: gui.h
Source/Runtime/include/: polos.h
Source/Runtime/platform/linux/: linux_timer.cpp
Source/Runtime/platform/xplat/: x_plat_window.h
Source/Runtime/polos/: polos_pch.h
Source/Runtime/polos/backend/: CMakeLists.txt  engine_subsystem.hpp
Source/Runtime/polos/communication/: CMakeLists.txt  event.hpp  event_bus.cpp  event_bus.hpp
Source/Runtime/polos/containers/: CMakeLists.txt  char_array.h  containers.h  delegate.h  dynamic_array.cpp  dynamic_array.h  expected.h
Source/Runtime/polos/context/: framebuffer.h  graphics_context.h  shader.h  shader_lib.h  texture.h  vao.h  vertex.h
Source/Runtime/polos/core/: CMakeLists.txt  application.cpp  application.h  camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  camera_type.h  entry_point.h  event_bus.cpp  event_bus.h  event_bus.inl  i_window.h  log.cpp  log.h  polos_main.hpp  resource_manager.cpp  resource_manager.h  system.h  update_queue.cpp  update_queue.h  window.h  window_system.cpp  window_system.h
Source/Runtime/polos/datatypes/: CMakeLists.txt  singleton.hpp  singleton.inl.hpp
Source/Runtime/polos/debug/: plassert.h  profiling.h
Source/Runtime/polos/engine/: engine.cpp  engine.h  engine_config.h
Source/Runtime/polos/events/: event.h  events.h
Source/Runtime/polos/filesystem/: CMakeLists.txt
Source/Runtime/polos/graphics/: CMakeLists.txt  animation.h  common.cpp  common.h  draw_commands.h  draw_commands.inl.h  draw_data.h  draw_strategy.h  framebuffer.h  graphics_context.h  quad_vertex.h  render_command.h  render_system.h  renderer.cpp  renderer.h  shader.h  shader_lib.h  texture.h  vao.h  vao_cache.cpp  vao_cache.h  vertex.h
Source/Runtime/polos/gui/: CMakeLists.txt  gui.h
Source/Runtime/polos/io/: file.cpp  file.h
Source/Runtime/polos/logging/: CMakeLists.txt  logger.cpp  logger.hpp  logging_macros.hpp
Source/Runtime/polos/memory/: CMakeLists.txt  linear_allocator.cpp  linear_allocator.h  mem_utils.h  pool_allocator.h  stack_allocator.cpp  stack_allocator.h  stack_allocator.inl
Source/Runtime/polos/platform/: CMakeLists.txt  (+2 more)
Source/Runtime/renderer/: renderer.h
Source/Tests/: CMakeLists.txt
Source/Tests/fixtures/: CMakeLists.txt  polos_systems_fixture.cpp  polos_systems_fixture.hpp
Source/resources/shaders/: basic_color.frag  basic_color.vert  texture.frag  texture.vert
(+435 files in other folders)
